@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- Sustain/Damper/Hold (MIDI CC#64) and Sustenuto (MIDI CC#66)
+  pedal controllers are now implemented. (EXPERIMENTAL)
 - Have some tolerance for buffer-size changes. (EXPERIMENTAL)
 - All builds default to Qt6 (Qt >= 6.1) where available.
 - CMake is now the official build system.
